v4.7.0 - Map!! - Completed the first iteration of the map feature, which is currently a reference feature detached from actual gameplay - Added the ability to auto-generate initiatives - Revamped runtime scenario creation by making scenarios an optional feature that can be modified with an inlined version of the quick combatant feature